<resources>
    <string name="app_name">Bit Cash</string>
    <string name="unit05">05</string>
    <string name="unit">DA</string>
    <string name="qnt">QNT</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="add_new_unit">add new unit</string>
    <string name="total_text">Total</string>
    <string name="total">Total :</string>
    <string name="da">DA</string>
    <string name="unit_value">Unit value</string>
    <string name="quantity">Quantity</string>
    <string name="bit">BiT</string>
    <string name="cash">Cash</string>
    <string name="time">Time</string>
    <string name="sort">Sort</string>
    <string name="last_created_first">Last created first</string>
    <string name="last_created_last">Last created last</string>
    <string name="highest_value_first">Highest value first</string>
    <string name="highest_value_last">Highest value last</string>
    <string name="largest_quantity_first">Largest quantity first</string>
    <string name="largest_quantity_last">Largest quantity last</string>
</resources>