<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/unit_card"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        style="@style/unit_container">

        <TextView
            android:id="@+id/unit_value"
            android:layout_marginStart="20dp"
            style="@style/unit_value"
            android:text="@string/unit05" />

        <TextView
            android:id="@+id/unit_text"
            style="@style/unit_text"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@id/unit_value"
            android:text="@string/unit" />

        <LinearLayout
            android:id="@+id/control_box"
            style="@style/control_box">

            <ImageView
                android:id="@+id/control_btn_plus"
                style="@style/control_btn"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_control_btn"
                android:text="@string/btn_minus" />

            <TextView
                android:id="@+id/unit_qnt"
                style="@style/qnt_text"
                android:text="@string/qnt" />

            <ImageView
                android:id="@+id/control_btn_minus"
                style="@style/control_btn"
                android:layout_marginTop="5dp"
                android:rotation="180"
                android:src="@drawable/ic_control_btn"
                android:text="@string/btn_plus" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>